[package]
name = "lens_driver"
version = "0.1.0"
edition = "2021"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]
description = "A Rust crate for interfacing with an optotune lens driver over a serial connection."
license = "MIT"

[dependencies]
serialport = "4.4.0"
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
mockall = "0.12.1"
