[package]
name = "lens_driver"
version = "0.1.0"
authors = ["Elhanan Buchsbaum <elhananby@gmail.com>"]
edition = "2021"

[lib]
name = "lens_driver"
crate-type = ["cdylib", "rlib"]

[dependencies]
serialport = "4.2"
log = "0.4"
env_logger = "0.11.5"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
pyo3 = { version = "0.22.6", features = ["extension-module"], optional = true }


[features]
default = ["python"]
python = ["dep:pyo3"]